--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Patricia Bradshaw - Data Scientist
 
 # Short description of your site
-description: Collection of Aerospace, AI and Other Awesome-ness
+description: Collection of Aerospace, AI and Other Awesome-Ness
 
 # --- Navigation bar options --- #
 
@@ -43,14 +43,14 @@ avatar: "/img/avatar-icon.png"
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#070d59"
-navbar-text-col: "#404040"
+navbar-text-col: "#FFFFFF"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#F5F5F5"
+link-col: "#774181"
+hover-col: "#774181"
+footer-col: "#070d59"
 footer-text-col: "#777777"
-footer-link-col: "#070d59"
+footer-link-col: "#FFFFFF"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
