--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ avatar: "/img/propic.jpg"
 
 navbar-col: "#a7d129"
 navbar-text-col: "#FFFFFF"
-navbar-children-col: "#F5F5F5"
+navbar-children-col: "#a7d129"
 page-col: "#FFFFFF"
 link-col: "#774181"
 hover-col: "#774181"
