--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ navbar-links:
     - Medium: "https://medium.com/@tlbradshaw91"
     #- Learn markdown: "http://www.markdowntutorial.com/"
     #- GitHub Pages: "https://pages.github.com/"
-  Author's home: "tbradshaw91.github.io"
+  Home: "tbradshaw91.github.io"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -44,7 +44,7 @@ avatar: "/img/propic.jpg"
 
 navbar-col: "#a7d129"
 navbar-text-col: "#FFFFFF"
-navbar-children-col: "#a7d129"
+navbar-children-col: "#f9fd50#
 page-col: "#FFFFFF"
 link-col: "#774181"
 hover-col: "#774181"
