--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ link-col: "#a7d129"
 hover-col: "#a7d129"
 footer-col: "#a7d129"
 footer-text-col: "#FFFFFF"
-footer-link-col: "#FFFFFF"
+footer-link-col: "#a7d129"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
