--- a/_config.yml
+++ b/_config.yml
@@ -105,14 +105,14 @@ url-pretty: "tbradshaw91.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
 #gtag: "<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138194197-1"></script>
+"<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138194197-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-138194197-1');
-</script>
+</script>"
 
 
 # Fill in your Google Analytics ID to track your website using GA
