--- a/_config.yml
+++ b/_config.yml
@@ -104,16 +104,7 @@ url-pretty: "tbradshaw91.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-#gtag: 
-"<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138194197-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-138194197-1');
-</script>"
+gtag: "gtag('config', 'UA-138194197-1');"
 
 
 # Fill in your Google Analytics ID to track your website using GA
